Fix wrapping of navigation sub-items

--- a/source/assets/stylesheets/pages/_guide.scss
+++ b/source/assets/stylesheets/pages/_guide.scss
@@ -63,7 +63,7 @@ body.guide {
   }
 
   .accordion {
-    margin-top: 40px;
+    margin-top: 35px;
     margin-bottom: 0;
 
     &:before, &:after {
@@ -86,7 +86,7 @@ body.guide {
 
     dd > a {
       color: $dark-gray;
-      padding: 10px 0;
+      padding: 15px 0 5px;
       display: block;
       font-size: 12px;
       text-transform: uppercase;
@@ -116,7 +116,7 @@ body.guide {
         margin: 0;
         list-style-image: url(/assets/images/box.gif);
         a {
-          display: block;
+          display: inline-block;
           padding: 5px 0;
           &:hover {
             color: darken($link-hover-color, 30%);
